@@ -62,26 +62,26 @@
 
 #define GRUB_KERNEL_MIPS_LOONGSON_LINK_ALIGN  32
 
-#define GRUB_KERNEL_MIPS_LOONGSON_COMPRESSED_SIZE          0x8
-#define GRUB_KERNEL_MIPS_LOONGSON_UNCOMPRESSED_SIZE        0xc
-#define GRUB_KERNEL_MIPS_LOONGSON_UNCOMPRESSED_ADDR        0x10
+#define GRUB_DECOMPRESSOR_MIPS_LOONGSON_COMPRESSED_SIZE          0x8
+#define GRUB_DECOMPRESSOR_MIPS_LOONGSON_UNCOMPRESSED_SIZE        0xc
+#define GRUB_DECOMPRESSOR_MIPS_LOONGSON_UNCOMPRESSED_ADDR        0x10
 
 #define GRUB_KERNEL_MIPS_LOONGSON_TOTAL_MODULE_SIZE	0x08
 
 #define GRUB_KERNEL_MIPS_QEMU_MIPS_LINK_ADDR         0x80200000
 #define GRUB_KERNEL_MIPS_QEMU_MIPS_LINK_ALIGN  32
-#define GRUB_KERNEL_MIPS_QEMU_MIPS_COMPRESSED_SIZE          0x8
-#define GRUB_KERNEL_MIPS_QEMU_MIPS_UNCOMPRESSED_SIZE        0xc
-#define GRUB_KERNEL_MIPS_QEMU_MIPS_UNCOMPRESSED_ADDR        0x10
+#define GRUB_DECOMPRESSOR_MIPS_QEMU_MIPS_COMPRESSED_SIZE          0x8
+#define GRUB_DECOMPRESSOR_MIPS_QEMU_MIPS_UNCOMPRESSED_SIZE        0xc
+#define GRUB_DECOMPRESSOR_MIPS_QEMU_MIPS_UNCOMPRESSED_ADDR        0x10
 #define GRUB_KERNEL_MIPS_QEMU_MIPS_TOTAL_MODULE_SIZE	0x08
 
 #define GRUB_KERNEL_MIPS_ARC_LINK_ADDR         0x8bd00000
 
 #define GRUB_KERNEL_MIPS_ARC_LINK_ALIGN  32
 
-#define GRUB_KERNEL_MIPS_ARC_COMPRESSED_SIZE          0x8
-#define GRUB_KERNEL_MIPS_ARC_UNCOMPRESSED_SIZE        0xc
-#define GRUB_KERNEL_MIPS_ARC_UNCOMPRESSED_ADDR        0x10
+#define GRUB_DECOMPRESSOR_MIPS_ARC_COMPRESSED_SIZE          0x8
+#define GRUB_DECOMPRESSOR_MIPS_ARC_UNCOMPRESSED_SIZE        0xc
+#define GRUB_DECOMPRESSOR_MIPS_ARC_UNCOMPRESSED_ADDR        0x10
 
 #define GRUB_KERNEL_MIPS_ARC_TOTAL_MODULE_SIZE	0x08
 
@@ -116,10 +116,6 @@
 #define GRUB_KERNEL_MACHINE_MOD_ALIGN GRUB_OFFSETS_CONCAT (GRUB_KERNEL_, GRUB_MACHINE, _MOD_ALIGN)
 #define GRUB_KERNEL_MACHINE_MOD_GAP GRUB_OFFSETS_CONCAT (GRUB_KERNEL_, GRUB_MACHINE, _MOD_GAP)
 #define GRUB_KERNEL_MACHINE_TOTAL_MODULE_SIZE GRUB_OFFSETS_CONCAT (GRUB_KERNEL_, GRUB_MACHINE, _TOTAL_MODULE_SIZE)
-#define GRUB_KERNEL_MACHINE_KERNEL_IMAGE_SIZE GRUB_OFFSETS_CONCAT (GRUB_KERNEL_, GRUB_MACHINE, _KERNEL_IMAGE_SIZE)
-#define GRUB_KERNEL_MACHINE_COMPRESSED_SIZE GRUB_OFFSETS_CONCAT (GRUB_KERNEL_, GRUB_MACHINE, _COMPRESSED_SIZE)
-#define GRUB_KERNEL_MACHINE_UNCOMPRESSED_SIZE GRUB_OFFSETS_CONCAT (GRUB_KERNEL_, GRUB_MACHINE, _UNCOMPRESSED_SIZE)
-#define GRUB_KERNEL_MACHINE_UNCOMPRESSED_ADDR GRUB_OFFSETS_CONCAT (GRUB_KERNEL_, GRUB_MACHINE, _UNCOMPRESSED_ADDR)
 
 #define GRUB_BOOT_MACHINE_KERNEL_SEG GRUB_OFFSETS_CONCAT (GRUB_BOOT_, GRUB_MACHINE, _KERNEL_SEG)
 #define GRUB_MEMORY_MACHINE_UPPER GRUB_OFFSETS_CONCAT (GRUB_MEMORY_, GRUB_MACHINE, _UPPER)
@@ -127,6 +123,7 @@
 
 #define GRUB_DECOMPRESSOR_MACHINE_COMPRESSED_SIZE GRUB_OFFSETS_CONCAT (GRUB_DECOMPRESSOR_, GRUB_MACHINE, _COMPRESSED_SIZE)
 #define GRUB_DECOMPRESSOR_MACHINE_UNCOMPRESSED_SIZE GRUB_OFFSETS_CONCAT (GRUB_DECOMPRESSOR_, GRUB_MACHINE, _UNCOMPRESSED_SIZE)
+#define GRUB_DECOMPRESSOR_MACHINE_UNCOMPRESSED_ADDR GRUB_OFFSETS_CONCAT (GRUB_DECOMPRESSOR_, GRUB_MACHINE, _UNCOMPRESSED_ADDR)
 #endif
 
 #ifndef ASM_FILE
